// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar should render 1`] = `
<DocumentFragment>
  <div
    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jfYOFQ"
    data-testid="Avatar"
  >
    <div
      class="w-full h-full overflow-hidden rounded-full"
    >
      <img
        alt="abc"
        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(76, 175, 80)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"60\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"50\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"60\\" cx=\\"80\\" cy=\\"40\\" fill=\\"rgb(0, 150, 136)\\"/></svg>"
        title="abc"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar should render with custom size 1`] = `
<DocumentFragment>
  <div
    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gxxcVQ"
    data-testid="Avatar"
  >
    <div
      class="w-full h-full overflow-hidden rounded-full"
    >
      <img
        alt="abc"
        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(76, 175, 80)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"60\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"50\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"60\\" cx=\\"80\\" cy=\\"40\\" fill=\\"rgb(0, 150, 136)\\"/></svg>"
        title="abc"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar should render without shadow 1`] = `
<DocumentFragment>
  <div
    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jWGOqb"
    data-testid="Avatar"
  >
    <div
      class="w-full h-full overflow-hidden rounded-full"
    >
      <img
        alt="abc"
        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(76, 175, 80)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"60\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"50\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"60\\" cx=\\"80\\" cy=\\"40\\" fill=\\"rgb(0, 150, 136)\\"/></svg>"
        title="abc"
      />
    </div>
  </div>
</DocumentFragment>
`;
